--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/bigspring"]
-	path = themes/bigspring
-	url = git@github.com:themefisher/bigspring-hugo-startup-theme.git
+path = themes/bigspring
+url = https://github.com/themefisher/bigspring-hugo-startup-theme.git
