--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -6,9 +6,9 @@ contentDir = "content/"
 weight = 1
 
 ########### footer content ##########
-footer_menu_left = "Company"
-footer_menu_middle = "Our Work"
-footer_menu_right = "Contact"
+footer_menu_left = "Useful Links"
+footer_menu_middle = "Services"
+footer_menu_right = "Contact Us"
 footer_content = "Crafting Software Products For Today and Tomorrow."
 # copyright
-copyright = "Designed By [Incubyte](https://incubyte.co/)"
+copyright = "© 2020 Incubyte. All rights reserved."
