--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -63,25 +63,50 @@ weight = 5
 
 # footer menu left
 [[footer_left]]
-name = "Careers"
-url = "https://www.incubyte.co/careers"
-
-[[footer_left]]
 name = "Why Incubyte"
 url = "https://incubyte.co/why-incubyte"
+weight = 1
+
+[[footer_left]]
+name = "Events"
+url = "https://www.incubyte.co/events"
+weight = 2
+
+[[footer_left]]
+name = "Inspiration!"
+url = "https://incubyte.co/inspiration"
+weight = 3
+
+[[footer_left]]
+name = "Careers"
+url = "https://www.incubyte.co/careers"
+weight = 4
 
 
 # footer menu middle
 [[footer_middle]]
-name = "Design And Develop"
+name = "Software Development"
 url = "https://www.incubyte.co/design-and-deveop"
+weight = 1
 
 [[footer_middle]]
-name = "Enhance and Modernize"
+name = "Software Modernization"
 url = "https://www.incubyte.co/enhance-and-modernize"
+weight = 2
+
+[[footer_middle]]
+name = "Software Quality Assessment"
+url = "https://www.incubyte.co/enhance-and-modernize"
+weight = 3
 
 
 # footer menu right
 [[footer_right]]
-name = "Get In Touch"
-url = "https://www.incubyte.co/events"
+name = "Let's Get Started"
+url = "https://incubyte.co/#Get-in-touch"
+weight = 1
+
+[[footer_right]]
+name = "Work With Us"
+url = "https://incubyte.co/careers"
+weight = 2
