--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://blog.incubyteco.co/"
+baseURL = "https://incubyteco.github.io/"
 title = "Incubyte Blog"
 theme = "bigspring"
 # post pagination
