--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,7 +3,7 @@ baseURL = "https://incubyteco.github.io/"
 title = "Incubyte Blog"
 theme = "bigspring"
 # post pagination
-paginate = "12"
+paginate = "18"
 # post excerpt
 summaryLength = "15"
 # disqus short name
@@ -23,3 +23,7 @@ border_color = "#ECECEC"
 black = "#000"
 white = "#fff"
 light = "#e6e6e9"
+[taxonomies]
+author = "authors"
+tag = "tags"
+category = "categories"
