--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -21,7 +21,7 @@ preloader = "" # use jpg, png, svg or gif format.
 [navigation_button]
 enable = true
 label = "LET'S TALK!"
-link = "https://incubyte.co/#Get-in-touch"
+link = "https://www.incubyte.co/lets-get-started"
 
 
 # cookies
