--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,10 +1,9 @@
-name: github pages
+name: Deploy GitHub Pages
 
 on:
   push:
     branches:
-      - main # Set a branch to deploy
-  pull_request:
+      - main
 
 jobs:
   deploy:
@@ -12,8 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          submodules: true # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
+          submodules: true
+          fetch-depth: 0
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
