--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
     "useTabs": false,
     "singleQuote": true,
     "semi": true,
-    "jsxBracketSameLine": true,
+    "bracketSameLine": true,
     "jsxSingleQuote": true,
     "trailingComma": "none",
     "arrowParens": "always",
