--- a/config.toml
+++ b/config.toml
@@ -1,19 +1,1 @@
-# customize your color and font from here.
-[params.variables]
-primary_color = "#0AA8A7"
-text_color = "#101319"
-text_color_dark = "#222"
-body_color = "#fff"
-border_color = "#ECECEC"
-black = "#000"
-white = "#fff"
-light = "#EDF6F5"
-
-# font variable
-# Give your font name from google font. add font weight using ":wght@" and separate by ";"
-# example: "Work Sans:wght@400;500;600"
-# primary_font = "Plus Jakarta Sans:wght@400"
-primary_font = "Public Sans:wght@400"
-primary_font_type = "sans-serif" # [serif/sans-serif]
-icon_font = "Font Awesome 5 Free"
-
+# Check config/_default/ for configs
