Revert "Merge pull request #215 from incubyte/move-blog"
This reverts commit d8a46dbb21618211bd725c741ebaf3f7533a2839, reversing
changes made to ecfaeadd90d679ee2c93340abd8ead1142335106.

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://engineering.incubyte.co/"
+baseURL = "https://blog.incubyte.co/"
 title = "Incubyte Blog"
 theme = "bigspring"
 # post pagination
