--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,7 +3,7 @@ baseURL = "https://blog.incubyte.co/"
 title = "Incubyte Blog"
 theme = "bigspring"
 # post pagination
-paginate = "18"
+pagination.pagerSize = "18"
 # post excerpt
 summaryLength = "10"
 # disqus short name
